Fix null and empty string fields not showing up in viewer and copy on click functionality

--- a/src/DataViewer/DataViewer.css
+++ b/src/DataViewer/DataViewer.css
@@ -28,6 +28,10 @@
   color: lightskyblue;
 }
 
+.null {
+  color: red;
+}
+
 .simple {
   margin-left: 6px;
 }
@@ -38,4 +42,14 @@
 
 .card-panel {
   min-height: 500px;
+}
+
+.text {
+  border: none;
+  color: black;
+}
+
+.text:hover {
+  background-color: rgb(32, 178, 170, 0.15);
+  cursor: pointer;
 }
